Fixed broken batch ui on iphone browser

--- a/styles/batch_list.css
+++ b/styles/batch_list.css
@@ -14,14 +14,18 @@
     transition: -moz-transform 0.3s, -o-transform 0.3s, -webkit-transform 0.3s, -ms-transform 0.3s, transform 0.3s;
 }
 
+.year {
+    cursor: pointer;
+}
+
 .year:hover {
     background-color: #f5f5f5;
-    cursor: pointer;
 }
 
 .month {
     margin-left: 20px;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .month:hover {
